# alpm

./: .codespellrc  .env  .gitignore  .gitlab-ci.yml  .gitmodules  .gource.conf  .lycheeignore  .mailmap  .taplo.toml  CONTRIBUTING.md  Cargo.toml  README.md  REUSE.toml  SECURITY.md  committed.toml  deny.toml  justfile  lychee.toml  mado.toml  renovate.json  rustfmt.toml
alpm-buildinfo/: CHANGELOG.md  Cargo.toml  README.md  build.rs
alpm-buildinfo/doc/: BUILDINFOv1.md
alpm-buildinfo/locales/en-US/: error.ftl  main.ftl
alpm-buildinfo/resources/specification/: BUILDINFO.5.md  BUILDINFOv1.5.md  BUILDINFOv2.5.md
alpm-buildinfo/src/: build_info.rs  buildinfo_v1.rs  buildinfo_v2.rs  cli.rs  commands.rs  common.rs  error.rs  lib.rs  main.rs  schema.rs
alpm-buildinfo/src/build_info/: format.rs  mod.rs  (+2 more)
alpm-buildinfo/tests/: buildinfov1.rs  integration.rs
alpm-common/: CHANGELOG.md  Cargo.toml  README.md
alpm-common/locales/: en.yml
alpm-common/src/: error.rs  lib.rs  locale.rs  package.rs  package_input.rs
alpm-common/tests/: i18n.rs
alpm-compress/: CHANGELOG.md  Cargo.toml  README.md
alpm-compress/src/: error.rs  lib.rs
alpm-config/: Cargo.toml  README.md
alpm-config/src/: error.rs  lib.rs  package.rs
alpm-db/: CHANGELOG.md  Cargo.toml  README.md
alpm-db-desc/: Cargo.toml
alpm-db-desc/src/: cli.rs  commands.rs  error.rs  lib.rs  main.rs  parser.rs  types.rs  v1.rs  v2.rs
alpm-db-desc/tests/: integration.rs
alpm-db/src/: error.rs  lib.rs
alpm-db/tests/: correct.rs  desc_cli.rs  files_cli.rs  integration.rs  parse_errors.rs
alpm-files/: CHANGELOG.md  Cargo.toml  README.md
alpm-files/src/: error.rs  lib.rs  main.rs  schema.rs
alpm-files/tests/: cli.rs  parser_errors.rs
alpm-lint/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
alpm-lint-config/: CHANGELOG.md  Cargo.toml  README.md
alpm-lint-config/src/: error.rs  group.rs  lib.rs  lint_config.rs  lint_rule.rs  lint_rule_config.rs
alpm-lint/examples/: my_new_lint.rs
alpm-lint/src/: cli.rs  commands.rs  error.rs  issue.rs  level.rs  lib.rs  lint.rs  main.rs  resources.rs  rule.rs  scope.rs  utils.rs
alpm-lint/tests/: display.rs  fixtures.rs  integration.rs  lint_rules.rs  resources.rs  source_info.rs
alpm-linting/: Cargo.toml  README.md
alpm-linting/src/: cli.rs  lib.rs
alpm-mtree/: CHANGELOG.md  Cargo.toml  README.md
alpm-mtree/src/: cli.rs  commands.rs  error.rs  file.rs  lib.rs  main.rs  mtree.rs  mtree_v2.rs  parser.rs  path_decoder.rs  schema.rs  unicode_decoder.rs  utils.rs
alpm-mtree/tests/: correct_syntax.rs  create.rs  happy_path.rs  integration.rs  interpreter_errors.rs  parse_errors.rs  validate.rs
alpm-package/: CHANGELOG.md  Cargo.toml  README.md
alpm-package/src/: compression.rs  config.rs  error.rs  filename.rs  input.rs  lib.rs  package.rs  pipeline.rs  scriptlet.rs
alpm-package/tests/: integration.rs
alpm-parsers/: CHANGELOG.md  Cargo.toml  README.md
alpm-parsers/src/: custom_ini.rs  lib.rs  macros.rs  traits.rs
alpm-parsers/tests/: integration.rs
alpm-pkgbuild/: CHANGELOG.md  Cargo.toml  README.md
alpm-pkgbuild/script/: pkgbuild-bridge.sh
alpm-pkgbuild/src/: bridge.rs  cli.rs  commands.rs  error.rs  lib.rs  main.rs
alpm-pkgbuild/tests/: correct.rs  integration.rs  invalid.rs
alpm-pkginfo/: CHANGELOG.md  Cargo.toml  README.md
alpm-pkginfo/src/: cli.rs  commands.rs  error.rs  lib.rs  main.rs  package_info.rs  package_info_v1.rs  package_info_v2.rs  pkginfo_v1.rs  pkginfo_v2.rs  schema.rs  utils.rs
alpm-pkginfo/tests/: integration.rs
alpm-repo/: Cargo.toml
alpm-repo-db/: CHANGELOG.md  Cargo.toml  README.md
alpm-repo-db/src/: error.rs  lib.rs
alpm-repo-db/tests/: correct.rs  files_cli.rs  integration.rs  parse_errors.rs
alpm-repo/src/: lib.rs
alpm-rootless/: Cargo.toml  README.md
alpm-rootless/examples/: run-rootlesskit.rs
alpm-rootless/src/: error.rs  fakeroot.rs  lib.rs  rootlesskit.rs  traits.rs  utils.rs
alpm-rootless/tests/: integration.rs  virtualized.rs
alpm-solve/: Cargo.toml  README.md
alpm-solve/src/: error.rs  lib.rs  provider.rs  solution.rs  solver.rs  types.rs  utils.rs
alpm-solve/tests/: integration.rs
alpm-soname/: CHANGELOG.md  Cargo.toml  README.md
alpm-soname-lookup/: Cargo.toml
alpm-soname-lookup/src/: cli.rs  dir.rs  error.rs  lib.rs  lookup.rs
alpm-soname/src/: autodeps.rs  cli.rs  commands.rs  detection.rs  elf.rs  error.rs  lib.rs  lookup.rs  main.rs
alpm-soname/tests/: integration.rs  shared.rs  tester.rs
alpm-srcinfo/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md
alpm-srcinfo/src/: cli.rs  commands.rs  create.rs  error.rs  lib.rs  lints.rs  main.rs  merged.rs  parser.rs  relation.rs  schema.rs
alpm-srcinfo/tests/: correct.rs  generate_srcinfo.bash  integration.rs  lints.rs  parse_errors.rs  pkgbuild_correct.rs  pkgbuild_invalid.rs  writer.rs
alpm-state-repo/: Cargo.toml
alpm-state-repo/src/: lib.rs
alpm-types/: CHANGELOG.md  Cargo.toml  README.md
alpm-types/locales/: en.yml
alpm-types/proptest-regressions/: checksum.txt
alpm-types/src/: checksum.rs  compression.rs  date.rs  db.rs  env.rs  error.rs  file_type.rs  lib.rs  license.rs  macros.rs  name.rs  openpgp.rs  path.rs  pkg.rs  relation.rs  size.rs  source.rs  system.rs  url.rs  version.rs
alpm-types/tests/: integration.rs
certificate-dir/: Cargo.toml
certificate-dir-openpgp/: Cargo.toml  testkey_loader.sh
certificate-dir-openpgp/src/: lib.rs  main.rs
certificate-dir/src/: lib.rs
dev-scripts/: Cargo.toml  README.md
dev-scripts/src/: cache.rs  cli.rs  cmd.rs  commands.rs  consts.rs  error.rs  main.rs  solver.rs  testing.rs  ui.rs
dev-scripts/tests/: integration.rs
fluent-i18n/: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md  REUSE.toml  cliff.toml  deny.toml
fluent-i18n/src/: error.rs  lib.rs  locale.rs  macros.rs  value.rs
fluent-i18n/tests/: integration.rs
python-alpm/: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  pyproject.toml
python-alpm/src/: helpers.rs  lib.rs  macros.rs  types.rs
python-alpm/tests/: test_alpm_imports.py
(+877 files in other folders)
