[workspace.package]
authors = [
    "Arne Beer <contact@arne.beer>",
    "David Runge <dvzrv@archlinux.org>",
    "Orhun Parmaksız <orhun@archlinux.org>",
]
edition = "2021"
homepage = "https://gitlab.archlinux.org/archlinux/alpm/alpm"
keywords = ["alpm", "arch", "linux", "packaging"]
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://gitlab.archlinux.org/archlinux/alpm/alpm"

[workspace]
members = [
    "alpm-buildinfo",
    "alpm-mtree",
    "alpm-parsers",
    "alpm-types",
    "dev-scripts",
]
resolver = "2"

[workspace.dependencies]
alpm-parsers = { path = "./alpm-parsers" }
alpm-types = { path = "./alpm-types" }
assert_cmd = "2.0.11"
clap = { version = "4.5.19", features = ["derive", "env", "string"] }
insta = "1.40.0"
rstest = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26.3", features = ["derive"] }
testresult = "0.4.1"
thiserror = "2.0.0"
winnow = "0.6"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
