[workspace.package]
authors = [
    "Arne Beer <contact@arne.beer>",
    "David Runge <dvzrv@archlinux.org>",
    "Orhun Parmaksız <orhun@archlinux.org>",
]
edition = "2024"
homepage = "https://alpm.archlinux.page"
keywords = ["alpm", "arch", "linux", "packaging"]
license = "Apache-2.0 OR MIT"
repository = "https://gitlab.archlinux.org/archlinux/alpm/alpm"
rust-version = "1.85.0"

[workspace]
members = [
    "alpm-buildinfo",
    "alpm-common",
    "alpm-mtree",
    "alpm-package",
    "alpm-parsers",
    "alpm-pkginfo",
    "alpm-srcinfo",
    "alpm-state-repo",
    "alpm-types",
    "dev-scripts",
    "python-alpm",
]
resolver = "3"

[workspace.dependencies]
alpm-buildinfo = { path = "./alpm-buildinfo", version = "0.2.0" }
alpm-common = { path = "./alpm-common", version = "0.1.0" }
alpm-mtree = { path = "./alpm-mtree", version = "0.2.0" }
alpm-parsers = { path = "./alpm-parsers", version = "0.2.0" }
alpm-pkginfo = { path = "./alpm-pkginfo", version = "0.2.0" }
alpm-types = { path = "./alpm-types", version = "0.6.0" }
assert_cmd = "2.0.11"
clap = { version = "4.5.19", features = [
    "derive",
    "env",
    "string",
    "wrap_help",
] }
colored = { version = "3", features = ["no-color"] }
flate2 = "1"
insta = "1.40.0"
log = "0.4.27"
proptest = "1.4.0"
rstest = "0.25.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12.2"
strum = { version = "0.27.0", features = ["derive"] }
tempfile = "3"
testresult = "0.4.1"
thiserror = "2.0.0"
winnow = "0.7.9"

[workspace.lints.rust]
missing_debug_implementations = "deny"
missing_docs = "deny"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
