[package]
authors.workspace = true
description = "Library and commandline toolkit for the specification, writing and parsing of ALPM BUILDINFO files"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-buildinfo"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[[bin]]
name = "alpm-buildinfo"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap"]
default = ["cli"]
winnow-debug = ["alpm-parsers/winnow-debug"]

[dependencies]
alpm-parsers.workspace = true
alpm-types.workspace = true
clap = { workspace = true, optional = true }
serde.workspace = true
serde_json = "1.0.133"
serde_with = "3.11.0"
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
rstest.workspace = true
tempfile.workspace = true
testresult.workspace = true
