[package]
authors.workspace = true
description = "Library providing common traits and functionalities for other ALPM crates"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-common"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
alpm-types.workspace = true
fluent-templates = "0.13.0"
sys-locale = "0.3.2"
thiserror.workspace = true
unic-langid = "0.9.6"

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
testresult.workspace = true

[lints]
workspace = true
