[package]
authors.workspace = true
description = "Library for compression operations in ALPM"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-compress"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true
