[package]
authors.workspace = true
description = "Specification and reference implementation of the ALPM ecosystem configuration"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-config"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
alpm-lint-config.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
testresult.workspace = true

[lints]
workspace = true
