[package]
authors.workspace = true
description = "Library for ALPM system databases"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-db"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]

[lints]
workspace = true
