[package]
authors.workspace = true
description = "Library and CLI for the handling of the alpm-files format"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-files"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]

[lints]
workspace = true
