[package]
authors.workspace = true
description = "Library and command line interface for the handling of the alpm-files format"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-files"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
alpm-common.workspace = true
alpm-types.workspace = true
fluent-i18n.workspace = true
strum.workspace = true
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
tempfile.workspace = true
testresult.workspace = true

[features]
_winnow = ["winnow/debug"]

[lints]
workspace = true
