[package]
authors.workspace = true
description = "Library and command line interface for the handling of the alpm-files format"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-files"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[[bin]]
name = "alpm-files"
path = "src/bin/alpm-files.rs"
required-features = ["cli"]

[dependencies]
alpm-common.workspace = true
alpm-types.workspace = true
clap = { workspace = true, optional = true }
fluent-i18n.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
rstest.workspace = true
tempfile.workspace = true
testresult.workspace = true

[features]
_winnow = ["winnow/debug"]
cli = ["dep:clap", "dep:serde_json", "serde"]
default = []
serde = ["dep:serde"]

[lints]
workspace = true
