[package]
authors.workspace = true
description = "Structs and enums for alpm-lint configuration"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-lint-config"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[features]

[dependencies]
serde.workspace = true
strum.workspace = true
toml.workspace = true

[lints]
workspace = true
