[package]
authors.workspace = true
description = "Types for alpm-lint configuration"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-lint-config"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.1"

[features]

[dependencies]
clap.workspace = true
fluent-i18n.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
testresult.workspace = true

[lints]
workspace = true
