[package]
authors.workspace = true
description = "Library and commandline toolkit for the specification, writing and parsing of ALPM .MTREE files"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-mtree"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[[bin]]
name = "alpm-mtree"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap"]
creation = ["dep:log", "dep:which"]
default = ["cli", "creation"]
winnow-debug = ["winnow/debug"]

[dependencies]
alpm-common.workspace = true
alpm-parsers.workspace = true
alpm-types.workspace = true
clap = { workspace = true, optional = true }
flate2 = "1"
log = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
which = { optional = true, version = "8.0.0" }
winnow.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
filetime = "0.2.25"
insta = { features = ["filters"], workspace = true }
rstest.workspace = true
simplelog.workspace = true
tempfile.workspace = true
testresult.workspace = true
