[package]
authors.workspace = true
description = "Library and commandline toolkit for the specification, writing and parsing of ALPM .MTREE files"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-mtree"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.2.2"

[[bin]]
name = "alpm-mtree"
path = "src/main.rs"
required-features = ["cli"]

[features]
_winnow-debug = ["winnow/debug"]
cli = ["dep:clap", "dep:serde_json"]
creation = ["dep:log", "dep:which"]
default = ["creation"]

[dependencies]
alpm-common.workspace = true
alpm-parsers.workspace = true
alpm-types.workspace = true
clap = { workspace = true, optional = true }
flate2.workspace = true
log = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true
which = { workspace = true, optional = true }
winnow.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
filetime = "0.2.25"
insta = { features = ["filters"], workspace = true }
rstest.workspace = true
serde_json.workspace = true
simplelog.workspace = true
tempfile.workspace = true
testresult.workspace = true

[lints]
workspace = true
