[package]
authors.workspace = true
description = "Library and command line tool for the creation of ALPM based packages"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-package"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
alpm-buildinfo = { version = "0.1.0", path = "../alpm-buildinfo", default-features = false }
alpm-mtree = { version = "0.1.0", path = "../alpm-mtree", default-features = false }
alpm-pkginfo = { version = "0.1.0", path = "../alpm-pkginfo", default-features = false }
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile.workspace = true
testresult.workspace = true
