[package]
name = "alpm-parsers"
description = "Various parsers for parsing Arch Linux package formats"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[features]
winnow-debug = ["winnow/debug"]

[dependencies]
serde.workspace = true
testresult.workspace = true
winnow.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
testresult.workspace = true
