[package]
authors.workspace = true
description = "Library and command line tool for interacting with ALPM PKGBUILD files"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-pkgbuild"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[[bin]]
name = "alpm-pkgbuild"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap"]
default = ["cli"]
winnow-debug = ["winnow/debug"]

[dependencies]
alpm-parsers.workspace = true
alpm-srcinfo.workspace = true
alpm-types.workspace = true
clap = { workspace = true, optional = true }
log.workspace = true
simplelog.workspace = true
strum.workspace = true
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
