[package]
name = "alpm-pkginfo"
description = "Library and commandline toolkit for the specification, writing and parsing of ALPM PKGINFO files"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "alpm-pkginfo"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap"]
default = ["cli"]
winnow-debug = ["alpm-parsers/winnow-debug"]

[dependencies]
alpm-parsers.workspace = true
alpm-types.workspace = true
clap = { workspace = true, optional = true }
erased-serde.workspace = true
serde.workspace = true
serde_json = "1.0.133"
serde_with = "3.11.0"
strum.workspace = true
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
pretty_assertions = "1.4.1"
rstest.workspace = true
tempfile.workspace = true
testresult.workspace = true
