[package]
authors.workspace = true
description = "Library and commandline toolkit for the specification, writing and parsing of ALPM PKGINFO files"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-pkginfo"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.3.0"

[[bin]]
name = "alpm-pkginfo"
path = "src/main.rs"
required-features = ["cli"]

[features]
_winnow-debug = ["alpm-parsers/_winnow-debug"]
cli = ["dep:clap"]
default = ["cli"]

[dependencies]
alpm-common.workspace = true
alpm-parsers.workspace = true
alpm-types.workspace = true
clap = { workspace = true, optional = true }
serde.workspace = true
serde_json = "1.0.133"
serde_with = "3.11.0"
strum.workspace = true
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
tempfile.workspace = true
testresult.workspace = true

[lints]
workspace = true
