[package]
authors.workspace = true
description = "Library for creating and accessing ALPM repository sync databases"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-repo-db"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]

[lints]
workspace = true
