[package]
authors.workspace = true
description = "Library for creating and accessing ALPM repository sync databases"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-repo-db"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[[bin]]
name = "alpm-repo-desc"
path = "src/bin/alpm-repo-desc.rs"
required-features = ["cli"]

[[bin]]
name = "alpm-repo-files"
path = "src/bin/alpm-repo-files.rs"
required-features = ["cli"]

[dependencies]
alpm-common.workspace = true
alpm-parsers.workspace = true
alpm-types.workspace = true
clap = { workspace = true, optional = true }
fluent-i18n.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
strum.workspace = true
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
tempfile.workspace = true
testresult.workspace = true

[features]
_winnow-debug = ["winnow/debug"]
cli = ["dep:clap", "dep:serde_json"]
default = []

[lints]
workspace = true
