[package]
authors.workspace = true
description = "Library and command line interface for ALPM package repositories"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-repo"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]

[lints]
workspace = true
