[package]
authors.workspace = true
description = "Rootless execution of commands that require root"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-rootless"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
log.workspace = true
thiserror.workspace = true
which.workspace = true

[lints]
workspace = true

[dev-dependencies]
simplelog.workspace = true
testresult.workspace = true
