[package]
authors.workspace = true
description = "Library for ALPM dependency solving, generic over metadata file type."
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-solve"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[dependencies]
alpm-common.workspace = true
alpm-types.workspace = true
resolvo = "0.10.2"
thiserror.workspace = true

[dev-dependencies]
alpm-db.workspace = true
insta.workspace = true
rstest.workspace = true

[lints]
workspace = true
