[package]
name = "alpm-soname-lookup"
description = "Library and commandline toolkit for looking up SONAMEs in ALPM context"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "alpm-soname-find-provision"
path = "src/bin/alpm-soname-find-provision.rs"

[[bin]]
name = "alpm-soname-find-dependency"
path = "src/bin/alpm-soname-find-dependency.rs"

[features]
cli = ["dep:clap"]
default = ["cli"]
winnow-debug = ["winnow/debug"]

[dependencies]
alpm-common.workspace = true
alpm-pkginfo = { path = "../alpm-pkginfo" }
alpm-types.workspace = true
clap = { workspace = true, optional = true }
tar = "0.4.44"
thiserror.workspace = true
winnow.workspace = true
zstd = "0.13.3"

[dev-dependencies]
rstest.workspace = true
