[package]
authors.workspace = true
default-run = "alpm-soname"
description = "Library and commandline toolkit for looking up soname data in an ALPM context"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "alpm-soname"
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[[bin]]
name = "alpm-soname"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap", "dep:log"]
default = ["cli"]

[dependencies]
alpm-package.workspace = true
alpm-pkginfo.workspace = true
alpm-types.workspace = true
clap = { workspace = true, optional = true }
clap-verbosity = "2.1.0"
goblin = "0.10.0"
lddtree = "0.3.7"
log = { version = "0.4.27", optional = true }
serde.workspace = true
serde_json.workspace = true
simplelog = "0.12.2"
strum.workspace = true
thiserror.workspace = true
walkdir = "2.5.0"

[dev-dependencies]
alpm-compress.workspace = true
alpm-mtree.workspace = true
assert_cmd.workspace = true
rstest.workspace = true
tempfile.workspace = true
testresult.workspace = true

[lints]
workspace = true
